--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,9 @@
   h1 {
     @apply text-pretty text-3xl font-bold lg:text-5xl;
   }
+  h2{
+    @apply text-3xl sm:text-4xl font-bold text-gray-900
+  }
 }
 @layer components {
   .container {
