--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,9 @@
   h2{
     @apply text-3xl sm:text-4xl font-bold text-gray-900
   }
+  h3{
+    @apply text-2xl md:text-3xl font-bold text-gray-900 leading-tight
+  }
 }
 @layer components {
   .container {
