--- a/app/globals.css
+++ b/app/globals.css
@@ -51,9 +51,9 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: #0377fc;
+  --primary: #023936;
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: #f38e22;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
@@ -120,13 +120,16 @@
     @apply bg-background text-foreground;
   }
   h1 {
-    @apply text-pretty text-3xl font-bold lg:text-5xl;
+    @apply text-pretty text-3xl font-bold lg:text-5xl text-primary;
   }
-  h2{
-    @apply text-3xl sm:text-4xl font-bold text-gray-900
+  h2 {
+    @apply text-3xl sm:text-4xl font-bold text-primary;
   }
-  h3{
-    @apply text-2xl md:text-3xl font-bold text-gray-900 leading-tight
+  h3 {
+    @apply text-2xl md:text-3xl font-bold text-gray-900 leading-tight;
+  }
+  p {
+    @apply text-muted-foreground text-black mb-8 max-w-xl lg:text-xl mx-auto;
   }
 }
 @layer components {
