--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,21 @@
 @import 'tw-animate-css';
 
 
+@keyframes gradient-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
+.animate-gradient {
+  animation: gradient-flow 15s ease infinite;
+}
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -157,7 +171,7 @@
     @apply text-2xl md:text-3xl font-bold text-gray-900 leading-tight;
   }
   p {
-    @apply text-muted-foreground text-black mb-8 max-w-xl lg:text-xl mx-auto;
+    @apply text-muted-foreground text-black  max-w-xl lg:text-xl mx-auto;
   }
 }
 @layer components {
